--- a/selection/pom.xml
+++ b/selection/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>jfx-sorter-api</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
