--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,6 @@
                 <version>5.4.0</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-controls</artifactId>
-                <version>${javafx.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-fxml</artifactId>
-                <version>${javafx.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -42,6 +32,8 @@
         <module>insertion</module>
         <module>heap</module>
         <module>quick</module>
+        <module>gui</module>
+        <module>mod-jlink</module>
     </modules>
     <build>
 
