Fix maven complain about version number cannot be an expression

--- a/mod-jlink/pom.xml
+++ b/mod-jlink/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	
 	<artifactId>jfx-sorter-mod-jlink</artifactId>
-	<version>${project.parent.version}</version>
+	<version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
 	<dependencies>
